--- a/package.json
+++ b/package.json
@@ -3,19 +3,61 @@
   "version": "1.0.0",
   "description": "## Documentation     https://playwright.dev/docs/intro",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "serenity-bdd update",
+    "clean": "rimraf target",
+    "test": "failsafe clean test:execute test:report",
+    "test:execute": "cucumber-js",
+    "test:report": "serenity-bdd run --features ./Pentaho/test/features",
+    "start": "mkdirp target/site/serenity && npx http-server -p 8080 target/site/serenity -s -o",
+    "lint": "eslint --ext ts --config .eslintrc.js .",
+    "lint:fix": "npm run lint -- --fix"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JoaoEnesGoncalves/playwrightPOC.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "serenity-js",
+    "bdd",
+    "playwright",
+    "playwright-test",
+    "testing"
+  ],
+  "author": "João Gonçalves",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JoaoEnesGoncalves/playwrightPOC/issues"
   },
   "homepage": "https://github.com/JoaoEnesGoncalves/playwrightPOC#readme",
+  "engines": {
+    "node": "^16.13 || ^18.12 || ^20",
+    "npm": "^6 || ^7 || ^8 || ^9"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.33.0"
+    "@cucumber/cucumber": "^9.1.2",
+    "@serenity-js/assertions": "^3.3.0",
+    "@serenity-js/console-reporter": "^3.3.0",
+    "@serenity-js/core": "^3.3.0",
+    "@serenity-js/cucumber": "^3.3.0",
+    "@serenity-js/playwright": "^3.3.0",
+    "@serenity-js/rest": "^3.3.0",
+    "@serenity-js/serenity-bdd": "^3.3.0",
+    "@serenity-js/web": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "is-ci": "^3.0.1",
+    "npm-failsafe": "^1.0.0",
+    "http-server": "^14.1.1",
+    "mkdirp": "^3.0.1",
+    "playwright": "^1.34.3",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
