--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "homepage": "https://github.com/JoaoEnesGoncalves/playwrightPOC#readme",
   "devDependencies": {
-    "@playwright/test": "^1.33.0"
+    "@playwright/test": "^1.34.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-playwright": "^0.12.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^5.1.3"
   }
 }
