--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/JoaoEnesGoncalves/playwrightPOC#readme",
   "devDependencies": {
-    "@playwright/test": "^1.34.3",
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
